--- a/web/viewer.html
+++ b/web/viewer.html
@@ -42,6 +42,7 @@ See https://github.com/adobe-type-tools/cmap-resources
 <!--<link rel="localization" href="toolkit/pdfviewer/viewer.ftl"/>-->
 <!--#else-->
     <link rel="stylesheet" href="viewer.css">
+    <link rel="stylesheet" href="chat.css">
 <!--#endif-->
 
 <!--#if MOZCENTRAL-->
@@ -94,6 +95,7 @@ See https://github.com/adobe-type-tools/cmap-resources
       }
     </script>
     <script src="viewer.js" type="module"></script>
+    <script type="module" src="chat.js"></script>
 <!--#endif-->
   </head>
 
@@ -370,6 +372,14 @@ See https://github.com/adobe-type-tools/cmap-resources
 
                 <div class="verticalToolbarSeparator hiddenMediumView"></div>
 
+                <button id="chatButton" class="toolbarButton" title="AI Chat">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M20 2H4C2.9 2 2 2.9 2 4V22L6 18H20C21.1 18 22 17.1 22 16V4C22 2.9 21.1 2 20 2ZM20 16H6L4 18V4H20V16Z" fill="currentColor"/>
+                    </svg>
+                </button>
+
+                <div class="verticalToolbarSeparator"></div>
+
                 <div id="secondaryToolbarToggle" class="toolbarButtonWithContainer">
                   <button id="secondaryToolbarToggleButton" class="toolbarButton" type="button" tabindex="0" data-l10n-id="pdfjs-tools-button" aria-expanded="false" aria-haspopup="true" aria-controls="secondaryToolbar">
                     <span data-l10n-id="pdfjs-tools-button-label"></span>
@@ -494,8 +504,22 @@ See https://github.com/adobe-type-tools/cmap-resources
 
         <div id="viewerContainer" tabindex="0">
           <div id="viewer" class="pdfViewer"></div>
+          
+          <div id="chatSidebar" class="chatSidebar">
+            <div class="chatHeader">
+              AI Chat Assistant
+            </div>
+            <div class="chatMessages" id="chatMessages">
+            </div>
+            <div class="chatInput">
+              <textarea id="chatInputText" placeholder="Ask something about the document..."></textarea>
+              <button id="chatSendButton">Send</button>
+            </div>
+          </div>
         </div>
+      
       </div> <!-- mainContainer -->
+
 
       <div id="dialogContainer">
         <dialog id="passwordDialog">
